--- a/map.html
+++ b/map.html
@@ -164,8 +164,18 @@
           webMap.when().then(() => {
             view.when(() => {
               const defaultZoom = view.zoom;
-              view.constraints.minZoom = defaultZoom - 2;
-              view.constraints.maxZoom = defaultZoom + 2;
+              view.constraints.minZoom = defaultZoom - 3;
+              view.constraints.maxZoom = defaultZoom + 3;
+              // Go to minZoom, get the extent, then restrict panning
+              const originalZoom = view.zoom;
+              view.zoom = view.constraints.minZoom;
+              view.whenLayerView(webMap.layers.getItemAt(0)).then(() => {
+                setTimeout(() => {
+                  const minZoomExtent = view.extent.clone();
+                  view.constraints.geometry = minZoomExtent;
+                  view.zoom = originalZoom;
+                }, 500);
+              });
             });
           });
 
