--- a/map.html
+++ b/map.html
@@ -201,15 +201,44 @@
           homeButton.setAttribute("icon", "home");
           homeButton.setAttribute("scale", "s");
           homeButton.setAttribute("text", "Home");
-          homeButton.style.margin = "8px";
+          homeButton.style.margin = "0 0 8px 0";
+          homeButton.style.boxShadow = "0 2px 6px rgba(0,0,0,0.15)";
+          homeButton.style.borderRadius = "6px";
+          homeButton.style.background = "white";
+          homeButton.style.display = "block";
           homeButton.addEventListener("click", () => {
             if (defaultCenter && defaultZoom) {
               view.goTo({ center: defaultCenter, zoom: defaultZoom });
             }
           });
-          // Add the home button to the bottom-right
-          view.ui.add(homeButton, "bottom-right");
+          // Add the home button to the bottom-right, above the zoom controls
+          view.ui.add(homeButton, { position: "bottom-right", index: 0 });
 
+          // --- Legend panel and expand button alignment ---
+          // Move the legend expand button to match the vertical position of the legend panel
+          // (legendPanel, expandLegend, collapseLegend already declared above)
+          function alignLegendPanel() {
+            const expandRect = expandLegend.getBoundingClientRect();
+            const containerRect = document.getElementById("appContainer").getBoundingClientRect();
+            // Calculate offset relative to appContainer
+            const top = expandRect.top - containerRect.top;
+            legendPanel.style.top = `${top}px`;
+          }
+          // When the legend is collapsed, show the expand button at the same height
+          expandLegend.addEventListener("click", function () {
+            legendPanel.hidden = false;
+            expandLegend.style.display = "none";
+            alignLegendPanel();
+          });
+          // When the legend is closed, show the expand button
+          collapseLegend.addEventListener("click", function () {
+            legendPanel.hidden = true;
+            expandLegend.style.display = "block";
+            // Position expand button at the same height as the legend panel
+            alignLegendPanel();
+          });
+          // Initial alignment
+          alignLegendPanel();
           // Add the legend widget to the drawer
           const legend = new Legend({
             view: view
@@ -217,9 +246,7 @@
           legend.container = "legendContent"; // Attach the legend to the drawer
 
           // Remove old legend drawer/toggle logic and use Calcite actions
-          const legendPanel = document.getElementById("legendPanel");
-          const collapseLegend = document.getElementById("collapseLegend");
-          const expandLegend = document.getElementById("expandLegend");
+          // (collapseLegend, expandLegend already declared above)
           collapseLegend.addEventListener("click", function () {
             legendPanel.hidden = true;
             expandLegend.style.display = "block";
