--- a/map.html
+++ b/map.html
@@ -205,11 +205,6 @@
           homeButton.style.boxShadow = "0 2px 6px rgba(0,0,0,0.15)";
           homeButton.style.borderRadius = "6px";
           homeButton.style.background = "white";
-          homeButton.style.display = "flex";
-          homeButton.style.alignItems = "center";
-          homeButton.style.justifyContent = "center";
-          homeButton.style.width = "40px";
-          homeButton.style.height = "40px";
           homeButton.addEventListener("click", () => {
             if (defaultCenter && defaultZoom) {
               view.goTo({ center: defaultCenter, zoom: defaultZoom });
@@ -241,6 +236,10 @@
           });
           // Initial alignment
           alignLegendPanel();
+          // Ensure initial legend panel position matches expand button
+          if (!legendPanel.hidden) {
+            alignLegendPanel();
+          }
           // Keep alignment on window resize
           window.addEventListener("resize", alignLegendPanel);
           // Add the legend widget to the drawer
