--- a/map.html
+++ b/map.html
@@ -66,7 +66,7 @@
   <body>
     <div id="appContainer">
       <!-- Floating Calcite Panel for Legend -->
-      <calcite-panel id="legendPanel" width-scale="s" style="position:absolute;top:90px;left:16px;z-index:100;min-width:220px;max-width:350px;box-shadow:0 2px 6px rgba(0,0,0,0.15);background:white;max-height:none;height:auto;padding-bottom:8px;">
+      <calcite-panel id="legendPanel" width-scale="s" style="position:absolute;top:16px;left:16px;z-index:100;min-width:180px;max-width:350px;box-shadow:0 2px 6px rgba(0,0,0,0.15);background:white;max-height:none;height:auto;padding-bottom:8px;">
         <div style="display:flex;align-items:center;justify-content:space-between;padding:0 1rem 0 0.5rem;">
           <span style="font-weight:bold;font-size:1.1em;">Legend</span>
           <calcite-action id="collapseLegend" icon="x" text="Close Legend" scale="s"></calcite-action>
@@ -216,8 +216,8 @@
           // --- Legend panel and expand button alignment ---
           // Use a fixed position for the legend panel relative to the top left corner
           function alignLegendPanel() {
-            legendPanel.style.top = "16px"; // Fixed offset from the top
-            legendPanel.style.left = "16px"; // Fixed offset from the left
+            legendPanel.style.top = "16px";
+            legendPanel.style.left = "16px";
           }
           // When the legend is collapsed, show the expand button
           expandLegend.addEventListener("click", function () {
