--- a/map.html
+++ b/map.html
@@ -331,6 +331,7 @@
             alert('Error loading project info: ' + err.message);
           });
         }
+      }); // <-- This closes the require callback
     </script>
   </body>
 </html>
