--- a/map.html
+++ b/map.html
@@ -67,9 +67,9 @@
     <div id="appContainer">
       <!-- Floating Calcite Panel for Legend -->
       <calcite-panel id="legendPanel" width-scale="s" style="position:absolute;top:16px;left:16px;z-index:100;width:180px;min-width:100px;max-width:350px;box-shadow:0 2px 6px rgba(0,0,0,0.15);background:white;max-height:none;height:auto;padding-bottom:8px;">
-        <div style="display:flex;align-items:center;justify-content:space-between;padding:0 0.5rem 0 0.5rem;">
+        <div style="display:flex;align-items:center;justify-content:space-between;padding:0 0 0 0.5rem;position:relative;">
           <span style="font-weight:bold;font-size:1.1em;">Legend</span>
-          <calcite-action id="collapseLegend" icon="x" text="Close Legend" scale="s"></calcite-action>
+          <calcite-action id="collapseLegend" icon="x" text="Close Legend" scale="s" style="position:absolute;right:0.25rem;top:50%;transform:translateY(-50%);"></calcite-action>
         </div>
         <div id="legendContent"></div>
       </calcite-panel>
